--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@vercel/analytics": "^0.1.8",
     "eventsource-parser": "^0.0.5",
     "framer-motion": "^8.4.3",
-    "react-icons": "^4.7.1",
+    "fs": "^0.0.1-security",
+    "gpt-3-encoder": "^1.1.4",
     "next": "latest",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
     "react-use-measure": "^2.1.1",
     "vercel": "^28.15.0"
   },
