--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-hook-form": "^7.42.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
