--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^4.9.0",
     "@tailwindcss/forms": "^0.5.3",
     "@vercel/analytics": "^0.1.11",
+    "axios": "^1.3.4",
     "eventsource-parser": "^0.0.5",
     "framer-motion": "^8.4.3",
     "fs": "^0.0.1-security",
